# search-engine

./: .gitignore  BloomFilter.h  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LinuxGetUrl.cpp  Makefile  README.md  README.txt  Robots.cpp  RobotsTxt.cpp  Traverse  Traverse.cpp  WordCount  WordCount.cpp  continue.sh  init.sh  libindex.dylib  majestic  notes.md  rebuild_and_continue.sh  simple_api.h  string.h  test_ranker.cpp  weights.txt
Documents/Tests/: WordCountUsage.correct.txt
LinuxTinyServer/: LinuxTinyServer  LinuxTinyServer.cpp
LinuxTinyServer/html/: index.html
LinuxTinyServerStarter/: LinuxTinyServer.cpp
autograder/hashtable/: Common.cpp  Common.h  HashBlob.h  HashTable.h  Makefile  TopN.cpp  test-topn.cpp
autograder/utf8/: Makefile  Utf8.cpp  flip.cpp
config/: shards.txt  shards_local.txt  weights.hpp  weights.txt
corpus/: 2026-01-15-nytimes.html
crawler/: HtmlTags.cpp  get_ssl.cpp  link_distributor.cpp  link_distributor.h  page_data.cpp  page_data.h  worker_thread.cpp
crawler_test_files/: crawled_page_data_rank_0_num_0  seedlist.txt
crawler_test_files/frontier_dir/: frontier_file_rank_1_num_0  frontier_file_rank_2_num_0  frontier_file_rank_2_num_1  frontier_file_rank_2_num_2  frontier_file_rank_2_num_3  frontier_file_rank_3_num_0  frontier_file_rank_3_num_1  frontier_file_rank_3_num_2  frontier_file_rank_4_num_0
eval/: interface.py  main.py  pyproject.toml  scoring.py  utils.py
frontend/: index.html  results.html  search.js  style.css
html/: RandomPages.parsed.html
index/: libindex.dylib  simple_api.h
scripts/: index_stats.py
scripts/loc_report/: blame.tsv  blame_file.sh  classified.tsv  classify.py  collect_blame.sh  sources.txt
server/: LinuxTinyServer  LinuxTinyServer.cpp  Plugin.h  SearchPlugin.cpp  ShardPlugin.cpp
src/: Common.cpp  Common.h  HashBlob.h  HashTable.cpp  HtmlParser.h  HtmlTags.cpp  Timer.h  build_index.cpp  constraint_solver.cpp  index.cpp  index.h  init.config  isr.cpp  main.cpp  majestic_million_parser.cpp  test.cpp  test_constraint_solver.cpp  test_index.cpp  test_minimal.cpp  test_real_data.cpp  test_seedlist.txt  test_tags
src/crawler/: BloomFilter.h  HtmlParser.h  Makefile  crawler.cpp  frontier.cpp  frontier.h  get_ssl.cpp  get_ssl.h  initializer.cpp  initializer.h  link_distributor.cpp  link_distributor.h  page_data.cpp  page_data.h  page_file_test.cpp  worker_thread.cpp  worker_thread.h
src/crawler/LinuxGetSsl/: LinuxGetSsl  LinuxGetSsl.cpp  LinuxGetUrl  LinuxGetUrl.cpp  README.md
src/crawler/robots.txt/: Robots  RobotsCache.h  RobotsTxt.cpp
src/engine/: query_compiler.hpp  query_distributor.hpp  search_engine.hpp  search_result.hpp  shard_client.hpp  url_utils.hpp
src/index/: Common.cpp  Common.h  HashTable.h  blob_format.h  constraint_solver.cpp  constraint_solver.h  index.cpp  index.h  index_builder.cpp  index_builder.h  isr.cpp  isr.h  page_data.cpp  page_data.h
src/query/: query_ast.hpp  query_compiler.hpp
src/ranker/: bm25.cpp  bm25.hpp  dynamic_ranker.hpp  ranker.hpp  url_parser.hpp  weight_profiles.hpp
src/ranker/config/: weights.hpp
src/ranker/dynamic/: bm25.cpp  bm25.hpp  dynamic_ranker.hpp  span_finder.hpp  span_result.hpp  text.hpp
src/ranker/static/: static_ranker.hpp  url_parser.hpp
src/ranker/static/data/: blacklist.txt  gen_blacklist.py
tests/: test_blob_v4_writer.cpp  test_constraint_solver.cpp  test_dynamic_ranker.cpp  test_frontier.cpp  test_helpers.h  test_index_case_folding.cpp  test_index_doc_boundaries.cpp  test_index_field_queries.cpp  test_index_seek_checkpoints.cpp  test_isr_and.cpp  test_isr_container.cpp  test_isr_enddoc.cpp  test_isr_or.cpp  test_isr_phrase.cpp  test_page_file_initialization.cpp  test_query_compiler.cpp  test_query_parser.cpp  test_ranker.cpp  test_robotscache.cpp  test_robotscache.cpp.disabled  test_snippet_roundtrip.cpp  test_span_finder.cpp  test_static_eval.cpp  test_static_ranker.cpp  test_url_parser.cpp
